Add settings devcontainer.json
forwarding
runtime argument

--- a/rust-ubuntu/.devcontainer/devcontainer.json
+++ b/rust-ubuntu/.devcontainer/devcontainer.json
@@ -41,10 +41,24 @@
             "version": "latest",
             "ppa": true
         }
-    }
-    // VSCodeが開くデフォルトのパス
-    // この設定がない場合のデフォルトは、ソースコードのマウント場所
-    // コンテナ内では、/workspace/配下になる
+    },
+    // ランタイム引数
+    "runArgs": [
+        // 開発コンテナ内のプロセスが、ptraceシステムコールを使用して他のプロセスをトレースすることができるようにするための設定
+        // デバッガなどのツールが正常に動作するために必要な場合がある
+        "--cap-add=SYS_PTRACE",
+        // 開発コンテナ内のプロセスが、seccompフィルターによる制限を受けずに実行されるようにするための設定
+        // 特定のシステムコールが必要な場合や、デバッグ目的で使用される
+        "--security-opt",
+        "seccomp=unconfined"
+    ],
+    // ポートフォワード
+    "forwardPorts": [
+        // 8080
+    ]
+    // ワークスペースの設定
+    // 開発コンテナ内で使用するワークスペースのパスを指定する
+    // デフォルトは /workspace/ 配下
     // Dockerfileに指定したRustは、コンテナ内の/home/vscode配下にある
     // "workspaceFolder": "/home/vscode",
 }
