--- a/rust-ubuntu/.devcontainer/devcontainer.json
+++ b/rust-ubuntu/.devcontainer/devcontainer.json
@@ -1,11 +1,13 @@
 // written by amatzk
-
+//
 // devcontainer.json リファレンス
 // https://containers.dev/implementors/json_reference/
 {
     // UIに表示されるDevContainer名
     "name": "rust-ubuntu-container",
-    "dockerFile": "Dockerfile",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
     "customizations": {
         // VSCodeや拡張機能の設定
         "vscode": {
