--- a/ubuntu/.devcontainer/devcontainer.json
+++ b/ubuntu/.devcontainer/devcontainer.json
@@ -1,5 +1,3 @@
-// written by amatzk
-//
 // devcontainer.json リファレンス
 // https://containers.dev/implementors/json_reference/
 {
@@ -8,6 +6,15 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
+    // Dockerイメージの指定（Dockerfileを指定しない場合）
+    //
+    // 次の３つのコンテナレジストリをサポート
+    // 1. DockerHub (https://hub.docker.com)
+    // 2. GitHub Container Registry (https://docs.github.com/ja/packages/learn-github-packages/introduction-to-github-packages)
+    // 3. Azure Container Registry (https://azure.microsoft.com/ja-jp/products/container-registry)
+    //
+    // ex) Microsoft DevContainer: Ubuntu 最新
+    // "image": "mcr.microsoft.com/vscode/devcontainers/base:ubuntu",
     "customizations": {
         // VSCodeや拡張機能の設定
         "vscode": {
@@ -36,7 +43,8 @@
     },
     // ランタイム引数
     "runArgs": [
-        // 開発コンテナ内のプロセスが、ptraceシステムコールを使用して他のプロセスをトレースすることができるようにするための設定
+        // 開発コンテナ内のプロセスが、ptraceシステムコールを使用して
+        // 他のプロセスをトレースすることができるようにするための設定
         // デバッガなどのツールが正常に動作するために必要な場合がある
         "--cap-add=SYS_PTRACE",
         // 開発コンテナ内のプロセスが、seccompフィルターによる制限を受けずに実行されるようにするための設定
