--- a/ubuntu/.devcontainer/devcontainer.json
+++ b/ubuntu/.devcontainer/devcontainer.json
@@ -36,7 +36,7 @@
     "features": {
         // Git
         // https://github.com/devcontainers/features/tree/main/src/git
-        "ghcr.io/devcontainers/features/git:1": {
+        "ghcr.io/devcontainers/features/git:latest": {
             "version": "latest",
             "ppa": true
         }
