--- a/rust-ms/.devcontainer/devcontainer.json
+++ b/rust-ms/.devcontainer/devcontainer.json
@@ -5,7 +5,8 @@
         "vscode": {
             "settings": {
                 "[rust]": {
-                    "editor.formatOnSave": true
+                    "editor.formatOnSave": true,
+                    "editor.formatOnPaste": true
                 },
                 "rust-analyzer.checkOnSave": true,
                 "rust-analyzer.check.command": "clippy"
