--- a/java-sdkman/.devcontainer/devcontainer.json
+++ b/java-sdkman/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "java-dev",
-    "image": "mcr.microsoft.com/vscode/devcontainers/base:debian",
+    "image": "mcr.microsoft.com/devcontainers/base:debian",
     "customizations": {
         "vscode": {
             "settings": {
