update cpp-dev vscode settings

--- a/cpp-ms/.devcontainer/devcontainer.json
+++ b/cpp-ms/.devcontainer/devcontainer.json
@@ -16,8 +16,7 @@
                 }
             },
             "extensions": [
-                "vadimcn.vscode-lldb",
-                "jeff-hykin.better-cpp-syntax"
+                "vadimcn.vscode-lldb"
             ]
         }
     }
