add init option

--- a/cpp-ms/.devcontainer/devcontainer.json
+++ b/cpp-ms/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
         "dockerfile": "./Dockerfile",
         "context": "."
     },
+    "init": true,
     "customizations": {
         "vscode": {
             "settings": {
