--- a/python-mamba/.devcontainer/devcontainer.json
+++ b/python-mamba/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "python-mamba",
     "image": "mcr.microsoft.com/vscode/devcontainers/base:ubuntu",
+    "init": true,
     "customizations": {
         "vscode": {
             "settings": {
