--- a/typescript-node/.devcontainer/devcontainer.json
+++ b/typescript-node/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "typescript-dev",
     "image": "mcr.microsoft.com/devcontainers/typescript-node",
+    "init": true,
     "customizations": {
         "vscode": {
             "settings": {
